Bug 126484 Occurences of uninitialized variables being used before being set (in Bidi files) patch by mozilla-bugs@nogin.org r=smontagu sr=bz