layout/base/src/nsBidi.cpp
@@ -853,7 +853,7 @@ void nsBidi::ResolveImplicitLevels(PRInt32 aStart, PRInt32 aLimit,
 
   /* initialize: current at aSOR, next at aStart (it is aStart<aLimit) */
   next=aStart;
-  dirProp=lastStrong=aSOR;
+  beforeNeutral=dirProp=lastStrong=aSOR;
   nextDirProp=dirProps[next];
   historyOfEN=0;
 
@@ -1707,8 +1707,7 @@ void nsBidi::ReorderLine(nsBidiLevel aMinLevel, nsBidiLevel aMaxLevel)
 {
   Run *runs;
   nsBidiLevel *levels;
-  PRInt32 firstRun, endRun, limitRun, runCount,
-  temp, trailingWSStart=mTrailingWSStart;
+  PRInt32 firstRun, endRun, limitRun, runCount, temp;
 
   /* nothing to do? */
   if(aMaxLevel<=(aMinLevel|1)) {
